test/compilable/imports/test15857c.d
module imports.test15857c;
void bar15857(string) {}
