test/fail_compilation/fail339.d
class A {
    class opDispatch(string s) {
        class C {}
    }
}

void main() {
    A.B.C obj;
}

